tests/baselines/reference/duplicatePropertyNames.errors.txt
tests/cases/conformance/types/members/duplicatePropertyNames.ts(5,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(15,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(20,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(23,5): error TS2393: Duplicate function implementation.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(26,5): error TS2300: Duplicate identifier 'baz'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(31,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(36,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(39,5): error TS2300: Duplicate identifier 'bar'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(44,5): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/types/members/duplicatePropertyNames.ts(46,5): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/conformance/types/members/duplicatePropertyNames.ts (10 errors) ====
    // duplicate property names are an error in all types
    
    interface Number {
        foo: string;
        foo: string;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    }
    
    interface String {
        foo(): string;
        foo(): string;
    }
    
    interface Array<T> {
        foo: T;
        foo: T;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    }
    
    class C {
        foo: string;
        foo: string;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    
        bar(x) { }
        bar(x) { }
        ~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
    
        baz = () => { }
        baz = () => { }
        ~~~
!!! error TS2300: Duplicate identifier 'baz'.
    }
    
    interface I {
        foo: string;
        foo: string;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    }
    
    var a: {
        foo: string;
        foo: string;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    
        bar: () => {};
        bar: () => {};
        ~~~
!!! error TS2300: Duplicate identifier 'bar'.
    }
    
    var b = {
        foo: '',
        foo: '',
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
        bar: () => { },
        bar: () => { }
        ~~~
!!! error TS2300: Duplicate identifier 'bar'.
    }
    